# Build-IDS26---Tata-Steel-hackathon

./: README.md  app.py  guide.py  presentation.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
src/camera/: detector.py  simulator.py
src/data/: geofences.py  real_data_loader.py  services.py  simulator.py
src/engine/: escalation.py  stop_analyzer.py  weight_analyzer.py
