[project]
name = "tata-rebar-pilferage"
version = "0.1.0"
description = "AI-Led Prevention of Pilferage in Rebar Transportation"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "folium>=0.15.0",
    "streamlit-folium>=0.17.0",
    "plotly>=5.18.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[project.scripts]
run-dashboard = "app:main"
